# easy_tensor_compiler

./: CMakeLists.txt  install.sh  main.cpp  optimization_result.md  readme.md  run_benchmark.sh
opt_benchmark/: CMakeLists.txt  benchmarking.cpp  benchmarking.hpp
src/: CMakeLists.txt  tensor_compiler.cpp  tensor_compiler.hpp
src/operations/: CMakeLists.txt  operations.cpp  operations.hpp
src/optimizations/: CMakeLists.txt  optimized_operations.cpp
src/tensor_class/: CMakeLists.txt  tensor.cpp  tensor.hpp
src/tensor_class/optimizations/: CMakeLists.txt  optimized_operations.cpp
tests/: CMakeLists.txt  tests.cpp  tests.hpp
